# Engine

./: .gitignore  Cargo.toml  git_version.txt
crates/engine-animation/: Cargo.toml
crates/engine-animation/src/: assets.rs  blend_space.rs  clip.rs  components.rs  convert.rs  debug.rs  events.rs  extract.rs  foot_ik.rs  layers.rs  lib.rs  loader.rs  locomotion_clips.rs  player.rs  pose.rs  root_motion.rs  skeleton.rs  state_machine.rs
crates/engine-animation/src/ik/: chain.rs  constraint.rs  debug.rs  effector.rs  mod.rs  solver.rs
crates/engine-animation/src/tests/: mod.rs
crates/engine-asset/: Cargo.toml
crates/engine-asset/src/: gltf.rs  hot_reload.rs  lib.rs  loader.rs  mesh.rs  path.rs  registry.rs  watcher.rs
crates/engine-asset/src/cook/: cooked_shader.rs  dependency.rs  error.rs  logic_asset.rs  manifest.rs  mesh.rs  mod.rs  scene.rs  texture.rs  validate.rs
crates/engine-asset/src/reload/: mod.rs  recook.rs  state.rs  watch.rs
crates/engine-audio/: Cargo.toml
crates/engine-audio/src/: clip.rs  components.rs  engine.rs  handle.rs  lib.rs  mixer.rs  source.rs
crates/engine-character/: Cargo.toml
crates/engine-character/examples/: character_demo.rs
crates/engine-character/src/: animation_bridge.rs  animation_params.rs  collision.rs  controller.rs  ffi.rs  lib.rs  movement.rs  pawn.rs  serde.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: coroutine.rs  diagnostics.rs  ffi_init.rs  game_loop.rs  lib.rs  script.rs
crates/engine-editor/: Cargo.toml
crates/engine-editor/src/: animation_preview.rs  asset_browser.rs  build.rs  commands.rs  debug_views.rs  diagnostics.rs  editor_core.rs  editor_ui.rs  gizmo.rs  hierarchy.rs  hot_reload_ui.rs  inspector.rs  io.rs  lib.rs  material_editor.rs  panels.rs  performance.rs  plugin.rs  prefab_editor.rs  scene_view.rs  script_build.rs  script_inspector.rs  shader_watcher.rs
crates/engine-editor/tests/: editor_tests.rs
crates/engine-ffi/: Cargo.toml
crates/engine-ffi/src/: animation.rs  async.rs  audio.rs  character.rs  component.rs  coroutine.rs  engine.rs  entity.rs  gameplay.rs  ik.rs  lib.rs  nav_agent.rs  registry.rs  types.rs  ui.rs  world_bridge.rs
crates/engine-gameplay/: Cargo.toml
crates/engine-gameplay/src/: event_bus.rs  input.rs  lib.rs  platform.rs  state.rs  telemetry.rs
crates/engine-hot-update/: Cargo.toml
crates/engine-hot-update/src/: apply.rs  cache.rs  download.rs  error.rs  install.rs  lib.rs  manager.rs  manifest.rs  package.rs  rollback.rs  verify.rs
crates/engine-messaging/: Cargo.toml
crates/engine-messaging/src/: lib.rs
crates/engine-nav/: Cargo.toml
crates/engine-nav/src/: agent.rs  behavior.rs  components.rs  cooker.rs  debug.rs  lib.rs  navmesh.rs  pathfinding.rs
crates/engine-nav/src/cook/: compact.rs  config.rs  contour.rs  convert.rs  heightfield.rs  mod.rs  polymesh.rs  region.rs
crates/engine-physics/: Cargo.toml
crates/engine-physics/src/: backend.rs  backend_queries.rs  components.rs  convert.rs  debug.rs  events.rs  joints.rs  lib.rs  queries.rs  serde.rs  types.rs  world.rs
crates/engine-physics/src/tests/: mod.rs
crates/engine-renderer/: Cargo.toml
crates/engine-renderer/src/: debug_draw.rs  lib.rs  material_resolver.rs  pipeline_cache.rs  pipeline_library.rs  render_extension.rs  render_graph.rs  render_graph2.rs  render_pass.rs  screenshot.rs  shader_compiler.rs  traits.rs  types.rs  validation.rs
crates/engine-renderer/src/tests/: mod.rs
crates/engine-scene/: Cargo.toml
crates/engine-scene/src/: archetype.rs  camera_utils.rs  component.rs  entity.rs  extraction.rs  lib.rs  pool.rs  prefab.rs  prefab_instance.rs  prefab_override.rs  prefab_override_raw.rs  scene.rs  third_person_camera.rs  validation.rs  world.rs
crates/engine-scene/src/components/: bounds.rs  camera.rs  light.rs  mod.rs  name.rs  renderable.rs  transform.rs
crates/engine-scene/src/registry/: asset.rs  component.rs  mod.rs
crates/engine-scene/src/tests/: mod.rs
crates/engine-scene/src/world/: mod.rs  scene.rs
crates/engine-script/: Cargo.toml
crates/engine-script/src/: api_compat.rs  component.rs  engine.rs  extension.rs  host.rs  ilruntime_host.rs  lib.rs  lifecycle.rs  mobile_subset.rs  process_host.rs  profile.rs  protocol.rs  value.rs
crates/engine-serialize/: Cargo.toml
crates/engine-serialize/src/: hot_update.rs  lib.rs  logic.rs
crates/engine-serialize/src/tests/: mod.rs
crates/engine-ui/: Cargo.toml
crates/engine-ui/src/: batch.rs  canvas.rs  color.rs  font.rs  input.rs  layout.rs  lib.rs  render.rs  types.rs
crates/platform/: Cargo.toml
crates/platform/src/: adapter.rs  lib.rs  profile.rs
crates/render-dx12/: Cargo.toml  build.rs
crates/render-dx12/src/: backend.rs  device.rs  encoder.rs  error.rs  handle.rs  lib.rs  pipeline.rs  resources.rs  scene_renderer.rs  shaders.hlsl  swapchain.rs
crates/render-opengl/: Cargo.toml
crates/render-opengl/src/: device.rs  encoder.rs  error.rs  lib.rs
crates/render-vulkan/: Cargo.toml  build.rs
crates/render-vulkan/shaders/: README.md  bloom_downsample.comp  bloom_downsample.comp.spv  bloom_upsample.comp  bloom_upsample.comp.spv  forward.frag  forward.frag.spv  forward.vert  forward.vert.spv  shadow.vert  shadow.vert.spv  skinned.vert  skinned.vert.spv  ssao.comp  ssao.comp.spv  textured.frag  textured.frag.spv  textured.vert  textured.vert.spv  tonemap.frag  tonemap.frag.spv  tonemap.vert  tonemap.vert.spv  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv  ui_overlay.frag  ui_overlay.frag.spv  ui_overlay.vert  ui_overlay.vert.spv
crates/render-vulkan/src/: adapter.rs  allocator.rs  device.rs  device_impl.rs  error.rs  frame.rs  instance.rs  lib.rs  pipeline.rs  renderer.rs  resource.rs  scene_renderer.rs  surface.rs  swapchain.rs
crates/render-vulkan/src/device_impl/: depth.rs  descriptor.rs  device_trait.rs  drop.rs  encoder.rs  env.rs  frame.rs  graph_barriers.rs  hdr.rs  mod.rs  pipeline.rs  slab.rs  (+5 more)
crates/sandbox/: Cargo.toml
crates/sandbox/src/: diagnostics.rs  editor_app.rs  main.rs
crates/sandbox/tests/: editor_pipeline.rs  integration.rs
(+197 files in other folders)
