[package]
name = "engine-animation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
backend-vulkan = []
backend-opengl = []
backend-dx12 = []
tooling-editor = []
tooling-hot-reload = []
target-desktop = []
target-mobile = []
subsystem-scripting-csharp = []

[dependencies]
engine-scene = { path = "../engine-scene" }
engine-renderer = { path = "../engine-renderer" }
engine-serialize = { path = "../engine-serialize" }
engine-asset = { path = "../engine-asset" }
bincode.workspace = true
glam.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
