[package]
name = "engine-asset"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
backend-vulkan = []
backend-opengl = []
backend-dx12 = []
tooling-editor = []
tooling-hot-reload = []
target-desktop = []
target-mobile = []
subsystem-scripting-csharp = []

[dependencies]
bincode.workspace = true
crossbeam-channel.workspace = true
engine-serialize = { path = "../engine-serialize" }
glam.workspace = true
notify.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
