[package]
name = "engine-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
subsystem-audio-cpal = []

[dependencies]
cpal.workspace = true
crossbeam-channel.workspace = true
glam.workspace = true
symphonia.workspace = true
thiserror.workspace = true
tracing.workspace = true
