[package]
name = "engine-character"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
engine-physics = { path = "../engine-physics" }
glam.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
