[package]
name = "engine-character"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
engine-animation = { path = "../engine-animation" }
engine-physics = { path = "../engine-physics" }
engine-renderer = { path = "../engine-renderer" }
engine-scene = { path = "../engine-scene" }
glam.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
