[package]
name = "engine-character"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []

[dev-dependencies]
platform = { path = "../platform" }
raw-window-handle.workspace = true
render-core = { path = "../render-core" }
render-vulkan = { path = "../render-vulkan" }

[dependencies]
engine-animation = { path = "../engine-animation" }
engine-physics = { path = "../engine-physics" }
engine-renderer = { path = "../engine-renderer" }
engine-scene = { path = "../engine-scene" }
engine-serialize = { path = "../engine-serialize" }
glam.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
