[package]
name = "engine-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
subsystem-scripting-csharp = ["dep:engine-script"]

[dependencies]
engine-renderer = { path = "../engine-renderer" }
engine-scene = { path = "../engine-scene" }
engine-script = { path = "../engine-script", optional = true }
engine-serialize = { path = "../engine-serialize" }
engine-ffi = { path = "../engine-ffi" }
tracing.workspace = true
