[package]
name = "engine-editor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
backend-vulkan = []
backend-opengl = []
backend-dx12 = []
tooling-editor = []
tooling-hot-reload = []
target-desktop = []
target-mobile = []
subsystem-scripting-csharp = []

[dependencies]
crossbeam-channel.workspace = true
engine-asset = { path = "../engine-asset" }
engine-renderer = { path = "../engine-renderer" }
engine-scene = { path = "../engine-scene" }
engine-serialize = { path = "../engine-serialize" }
engine-ui = { path = "../engine-ui" }
glam.workspace = true
ron.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
