[package]
name = "engine-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "FFI bridge between Rust engine and C# scripting layer"

[dependencies]
engine-animation = { path = "../engine-animation" }
engine-character = { path = "../engine-character" }
engine-nav = { path = "../engine-nav" }
engine-physics = { path = "../engine-physics" }
engine-serialize = { path = "../engine-serialize" }
engine-scene = { path = "../engine-scene" }
glam.workspace = true
serde_json.workspace = true
tracing.workspace = true
