[package]
name = "engine-gameplay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Game state management, event bus, and general gameplay systems"

[features]
default = []

[dependencies]
engine-serialize = { path = "../engine-serialize" }
glam.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
