[package]
name = "engine-hot-update"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
bincode.workspace = true
crossbeam-channel.workspace = true
engine-asset = { path = "../engine-asset" }
engine-serialize = { path = "../engine-serialize" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
ureq = "2.9"

[dev-dependencies]
tempfile = "3"
