[package]
name = "engine-messaging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
crossbeam-channel.workspace = true
engine-serialize = { path = "../engine-serialize" }
platform = { path = "../platform" }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
