[package]
name = "engine-nav"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
bincode.workspace = true
engine-character = { path = "../engine-character" }
engine-renderer = { path = "../engine-renderer" }
engine-scene = { path = "../engine-scene" }
engine-serialize = { path = "../engine-serialize" }
glam.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
