[package]
name = "engine-physics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
crossbeam-channel.workspace = true
engine-scene = { path = "../engine-scene" }
engine-renderer = { path = "../engine-renderer" }
engine-serialize = { path = "../engine-serialize" }
glam.workspace = true
rapier3d.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
