[package]
name = "engine-renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
engine-serialize = { path = "../engine-serialize" }
glam.workspace = true
image.workspace = true
render-core = { path = "../render-core" }
serde.workspace = true
tracing.workspace = true
