[package]
name = "engine-scene"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
engine-renderer = { path = "../engine-renderer" }
engine-serialize = { path = "../engine-serialize" }
serde.workspace = true
thiserror.workspace = true
glam.workspace = true
ron.workspace = true
indexmap.workspace = true
