[package]
name = "engine-script"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
base64.workspace = true
crossbeam-channel.workspace = true
engine-serialize = { path = "../engine-serialize" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
