[package]
name = "engine-serialize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
backend-vulkan = []
backend-opengl = []
backend-dx12 = []
tooling-editor = []
tooling-hot-reload = []
target-desktop = []
target-mobile = []
subsystem-scripting-csharp = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
sha2.workspace = true
