[package]
name = "platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
backend-vulkan = []
backend-opengl = []
backend-dx12 = []
tooling-editor = []
tooling-hot-reload = []
target-desktop = []
target-mobile = []
subsystem-scripting-csharp = []

[dependencies]
raw-window-handle.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
winit.workspace = true

[dev-dependencies]
serde_json.workspace = true
