[package]
name = "platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
raw-window-handle.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
winit.workspace = true

[dev-dependencies]
serde_json.workspace = true
