[package]
name = "render-dx12"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["backend-dx12"]
backend-dx12 = ["dep:windows"]

[dependencies]
engine-renderer = { path = "../engine-renderer" }
engine-serialize = { path = "../engine-serialize" }
glam.workspace = true
render-core = { path = "../render-core" }
thiserror.workspace = true
tracing.workspace = true
windows = { workspace = true, optional = true }
