[package]
name = "render-opengl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
backend-vulkan = []
backend-opengl = []
backend-dx12 = []
tooling-editor = []
tooling-hot-reload = []
target-desktop = []
target-mobile = []
subsystem-scripting-csharp = []

[dependencies]
glow.workspace = true
render-core = { path = "../render-core" }
thiserror.workspace = true
tracing.workspace = true
