[package]
name = "render-vulkan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = []

[dependencies]
ash.workspace = true
ash-window.workspace = true
glam.workspace = true
engine-renderer = { path = "../engine-renderer" }
raw-window-handle.workspace = true
render-core = { path = "../render-core" }
thiserror.workspace = true
tracing.workspace = true
