[package]
name = "sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
backend-vulkan = ["dep:render-vulkan"]
backend-opengl = ["dep:render-opengl"]
backend-dx12 = ["dep:render-dx12"]
tooling-editor = ["engine-editor/tooling-editor", "dep:engine-editor"]
tooling-hot-reload = []
target-desktop = []
target-mobile = []
subsystem-scripting-csharp = []

[dependencies]
engine-animation = { path = "../engine-animation" }
engine-asset = { path = "../engine-asset" }
engine-character = { path = "../engine-character" }
engine-core = { path = "../engine-core" }
engine-physics = { path = "../engine-physics" }
engine-editor = { path = "../engine-editor", optional = true }
engine-renderer = { path = "../engine-renderer" }
engine-scene = { path = "../engine-scene" }
engine-serialize = { path = "../engine-serialize" }
glam.workspace = true
render-core = { path = "../render-core" }
platform = { path = "../platform" }
raw-window-handle.workspace = true
render-vulkan = { path = "../render-vulkan", optional = true }
render-opengl = { path = "../render-opengl", optional = true }
render-dx12 = { path = "../render-dx12", optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true
